@@ -18,6 +18,7 @@ SecureServ Module for NeoStats Changelog.
  - A check to see if we have bots for Onjoin Checking. Fix |VIO|Maveric problem (F)
  - Changed SET LIST to output setting names rather than descriptions (M)
  - SecureServ will log positives and the action taken (M)
+ - Added RELOAD command to allow reloading of viri.dat and customviri.dat without restart (M)
  
 0.9.4 - Fish - 20 Aug, 2003
  - configure now checks for crypt.h (BugID: 37)
